fix(ui): alignment of the references & hierarchy container from right sidebar

--- a/src/main/frontend/components/container.css
+++ b/src/main/frontend/components/container.css
@@ -683,7 +683,7 @@
   }
 
   .references {
-    margin-left: 12px;
+    @apply mx-[28px];
   }
 
   .sidebar-drop-indicator {
@@ -756,6 +756,10 @@
         }
       }
     }
+  }
+
+  .page-hierarchy {
+    @apply pl-[28px];
   }
 }
 
